# wordler

./: LICENSE  stack.yaml  wordler.cabal
src/: Game.hs  Main.hs  Solver.hs
