name:                wordler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/OwenPriceSkelly/wordler#readme
license:             BSD3
license-file:        LICENSE
author:              Owen Price Skelly
maintainer:          OwenPriceSkelly@uchicago.edu
copyright:           2022 Owen Price Skelly
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wordler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.2
                     , parallel >= 3.2.2.0
  other-modules:       Game
                     , Solver
